# chat_server

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  generate_vs2022.bat  vcpkg.json
build_dependency/: README.txt  setup_vcpkg.bat  setup_vcpkg.ps1
build_protoc/: protoc_build.bat
chat_server/: CMakeLists.txt  chat_server.cpp  chat_server.h  chat_session.cpp  chat_session.h  main.cpp  pch.h  startup_validator.cpp  startup_validator.h
chat_server/chat/: chat_handler.cpp  chat_handler.h  chat_room.cpp  chat_room.h  chat_room_selector.cpp  chat_room_selector.h
chat_server/config_tables/: server_setting.json
chat_server/configs/: config_loader.cpp  config_loader.h  server_setting.cpp  server_setting.h
chat_server/content/: content_type.h
chat_server/database/sql/: query_executor.h
chat_server/handler/: packet_handler_registry.cpp  packet_handler_registry.h
chat_server/session/: chat_session.cpp  chat_session.h
chat_server/tests/: test_query.cpp  test_query.h
chat_server/user_detail/: user.cpp  user.h  user_handler.cpp  user_handler.h  user_repository.cpp  user_repository.h
database/: CMakeLists.txt  connection_validator.cpp  connection_validator.h  database_service.cpp  database_service.h  pch.h  query.cpp  query.h  query_executor.cpp  query_executor.h
database/config/: sql_info.h
database/query/: query_async.h  query_context.h  query_execution.h
dummy_client/: CMakeLists.txt  dummy_session.cpp  dummy_session.h  main.cpp
dummy_client/handler/: connection_handler.cpp  connection_handler.h
dummy_client/public_chat/: chat_handler.cpp  chat_handler.h
network/: CMakeLists.txt  pch.h  server.cpp  server.h  session.cpp  session.h
network/handler/: handler.h  packet_handler.cpp  packet_handler.h
property_sheets/: Dev.Debug.props  Iguana.Debug.props  Iguana.Release.props
protobuf/: CMakeLists.txt  pch.h  protobuf_session.cpp  protobuf_session.h
protobuf/handler/: handler.h  register_handler.h
protobuf/idl/: chatting.proto  packet_id.proto
system/: CMakeLists.txt  actor.cpp  actor.h  custom_exception.h  enumerator.h  error_handler.h  pch.h  singleton.h  system.cpp  type.h
utility/: CMakeLists.txt  log.cpp  log.h  magic_enum_define.h  pch.h  system_status.cpp  system_status.h  utility.cpp
utility/bitset/: bitset_converter.h
utility/exception/: exception_handler.cpp  exception_handler.h
utility/file/: file_loader.cpp  file_loader.h  path.cpp  path.h
utility/log/: dummy_logger.cpp  dummy_logger.h  logger.cpp  logger.h  static_logger.cpp  static_logger.h
utility/math/: float_comparison.h
utility/string/: string_converter.cpp  string_converter.h
